# mlops

./: README.md  __init__.py  __main__.py  pyproject.toml
conf/: columns.yaml  path.yaml  preprocess.yaml  training.yaml
mlops/my_hopsworks/: connector.py
mlops/pipelines/: config.py  inference.py  preprocess.py  training.py
