[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Harish Gehlot <gehloth03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
omegaconf = "^2.3.0"
supabase = "^2.6.0"
polars = "^1.3.0"
hopsworks = "^3.7.0"
scikit-learn = "^1.5.1"
pyyaml = "^6.0.1"
comet-ml = "^3.44.3"
python-dotenv = "^1.0.1"
xgboost-cpu = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
